# python_template

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  copier.yml  pyproject.toml
templates/cli/: .gitignore  CLAUDE.md.jinja  README.md.jinja  pyproject.toml.jinja
templates/cli/.claude/: rules.md  settings.json
templates/cli/.claude/skills/lint/: SKILL.md
templates/cli/.claude/skills/run/: SKILL.md
templates/cli/.claude/skills/test/: SKILL.md
templates/cli/src/{{_package_name}}/: __init__.py  __main__.py.jinja  config.py.jinja  main.py.jinja
templates/cli/tests/: test_main.py.jinja
templates/notebook/: .copier-answers.yml.jinja  .gitignore  CLAUDE.md.jinja  README.md.jinja  pyproject.toml.jinja
templates/notebook/.claude/: rules.md  settings.json
templates/notebook/notebooks/: example.py.jinja
templates/notebook/src/{{_package_name}}/: __init__.py  data.py
templates/notebook/{% if include_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja
templates/web-api/: .env.example  .gitignore  CLAUDE.md.jinja  README.md.jinja  alembic.ini.jinja  pyproject.toml.jinja  {% if include_docker %}.dockerignore{% endif %}  {% if include_docker %}Dockerfile{% endif %}.jinja
templates/web-api/.claude/: python.md  rules.md  settings.json
templates/web-api/alembic/: env.py.jinja
templates/web-api/src/{{_package_name}}/: config.py.jinja  database.py.jinja  exceptions.py  main.py.jinja
templates/web-api/tests/: conftest.py.jinja  test_users.py.jinja
templates/web-api/{% if include_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja
(+14 files in other folders)
