[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fukuemon", email = "Fukuemony029@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.35",
    "pydantic-settings>=2.5.0",
    "alembic>=1.13.0",
    "uvicorn>=0.31.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "pyrefly>=0.42.0",
    "pytest>=8.3.0",
    "pre-commit>=3.8.0",
]

[tool.pyrefly]
python-version = "3.14"
project-includes = ["src/**/*.py"]
ignore-missing-imports = true

[tool.ruff]
target-version = "py314" 
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "ANN", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"